Superuser feature added
