# SimpleChatServerSideCode/SocketManager.cs
@@ -39,7 +39,7 @@ namespace SimpleChatServerSideCode
                 //sockets.Add(socket);
             }
         }
-        public async void ReceiveAsync(Socket socket)
+        public async Task ReceiveAsync(Socket socket)
         {
             try
             {
@@ -110,19 +110,121 @@ namespace SimpleChatServerSideCode
                     case OpCode.SendMessage:
                         CheckSendMessage(socket, data2);
                         break;
+                    case OpCode.GetDBlogs:
+                        await CheckGetDBLogs(socket, data2);
+                        break;
                     default:
                         break;
                 }
 
                 ReceiveAsync(socket);
-                
             }
-            catch (DivideByZeroException)
+            catch (Exception)
             {
                 var employee = EmployeeManager.GetEmployeeFromSocket(socket);
                 Net_Log log = new Net_Log($"Employee {employee.Email} has logged out. Session time:{DateTime.UtcNow - employee.LoginTime}", LogType.LogOut);
                 WebAPI.instance.DBLogAsync(JsonConvert.SerializeObject(log));
                 EmployeeManager.RemoveOnlineEmployee(socket);
+                //Socket Disconnected?
+            }
+
+        }
+
+        private async Task CheckGetDBLogs(Socket socket, string data2)
+        {
+            Net_GetDBLogs getDBLogs = JsonConvert.DeserializeObject<Net_GetDBLogs>(data2);
+            if (EmployeeManager.IsEmployeeSuperuser(socket) && EmployeeManager.IsValidToken(socket, getDBLogs.Token))
+            {
+                var response = await WebAPI.instance.GetDBLogsAsync();
+                var responseList = response.ToList();
+
+                byte packages = (byte)(responseList.Count / 5);
+                packages = packages >= 4 ? (byte)3 : packages;
+                for (int i = 0; i <= packages; i++)
+                {
+                    List<Net_Log> logs = new List<Net_Log>();
+                    var fragment = responseList.GetRange(i * 5, 5);
+                    for (int a = 0; a < fragment.Count; a++)
+                    {
+                        Net_Log log = JsonConvert.DeserializeObject<Net_Log>(fragment[a]);
+                        logs.Add(log);
+                    }
+                    Net_OnGetDBLogs onGetDBLogs = new Net_OnGetDBLogs(logs, (byte)i, packages, Status.Successful);
+                    socket.Send(onGetDBLogs.GetByte());
+                    ReceiveAck(socket);
+                }
+            }
+            else
+            {
+                socket.Send(new Net_OnGetDBLogs(null, 0, 0, Status.Error).GetByte());
+            }
+        }
+
+        public bool ReceiveAck(Socket socket)
+        {
+            try
+            {
+                /*
+                using (var sslStream = new SslStream(new NetworkStream(socket), false, App_CertificateValidation))
+                {
+                    sslStream.AuthenticateAsServer(serverCertificate, true, SslProtocols.Tls12, false);
+
+                    while (true)
+                    {
+                        var inputBuffer = new byte[1024];
+                        var inputBytes = 0;
+                        while (inputBytes == 0)
+                        {
+                            inputBytes = sslStream.Read(inputBuffer, 0, inputBuffer.Length);
+                        }
+                        var inputMessage = Encoding.ASCII.GetString(inputBuffer, 0, inputBytes);
+                    }
+                }
+                */
+
+                byte[] rec_bytes = new byte[1024];
+                ArraySegment<byte> bytesSeg = new ArraySegment<byte>(rec_bytes);
+                int bytesRec = socket.Receive(bytesSeg, SocketFlags.None);
+
+
+
+                byte[] d = new byte[1024];
+
+                AesManaged aes = new AesManaged();
+                aes.Padding = PaddingMode.Zeros;
+                ICryptoTransform encryptor = aes.CreateDecryptor("1234567812345678".GetASCIIBytes(), "1234567812345678".GetASCIIBytes());
+
+                string data2;
+                using (MemoryStream ms = new MemoryStream(rec_bytes))
+                {
+                    using (CryptoStream cs = new CryptoStream(ms, encryptor, CryptoStreamMode.Read))
+                    {
+                        using (StreamReader sr = new StreamReader(cs))
+                        {
+                            data2 = sr.ReadLine();
+                            data2 = data2.Split('\0')[0];
+                        }
+                    }
+                }
+
+                //var data2 = "";
+
+
+
+                string data = Encoding.ASCII.GetString(rec_bytes, 0, bytesRec);
+                Net_Base basePacket = JsonConvert.DeserializeObject<Net_Base>(data2);
+
+                switch (basePacket.OpCode)
+                {
+                    case OpCode.Ack:
+                        return true;
+                    default:
+                        return ReceiveAck(socket);
+                }
+            }
+            catch (Exception)
+            {
+                return false;
                 //Socket Disconnected?
             }
 
@@ -200,7 +302,7 @@ namespace SimpleChatServerSideCode
                     if (!EmployeeManager.HasEmployeeSignedIn(socket))
                     {
                         string token = Utilities.RandomString(10);
-                        EmployeeManager.AddOnlineEmployee(new OnlineEmployee(socket, loginData.Email, token));
+                        EmployeeManager.AddOnlineEmployee(new OnlineEmployee(socket, loginData.Email, token,responseData.IsSuperuser));
                         responseData.Token = token;
                     }
                     else
